add taggsm
